2008-07-01  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * src/ccm-window.c: Sync display on ccm_window_new

2008-06-29  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * src/ccm-window.c: Don't buffering undecorated and input only window.

2008-06-28  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * plugins/fade/ccm-fade.c:
    * plugins/magnifier/ccm-magnifier.c:
    * plugins/menu-animation/ccm-menu-animation.c:
    * plugins/mosaic/ccm-mosaic.c:
    * plugins/opacity/ccm-opacity.c:
    * plugins/perf/ccm-perf.c:
    * plugins/shadow/ccm-shadow.c:
    * src/ccm-keybind.c:
    * src/ccm-screen.c:
    * src/ccm-window.c: Implement dynamic config change, fix some memory leak
                        and fix some crash.

2008-06-27  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * plugins/magnifier/ccm-magnifier.c:
    * src/ccm-pixmap-buffered-image.c:
    * src/ccm-screen.c:
    * src/ccm-window.c: Fix buffering on move.
    
    * plugins/shadow/ccm-shadow.c:
    * src/ccm-window.c:
    * src/ccm.h: Better handling invalid matrix.

2008-06-26  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * src/ccm-pixmap-buffered-image.c: Don't buffer by default.
    * src/ccm-window.c: Small performance improvement.

2008-06-26  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * plugins/magnifier/ccm-magnifier.schemas.in: 
    * plugins/magnifier/ccm-magnifier.c: Add zoom quality option and manage
                                         mouse change when zoom is enabled.
    * plugins/opacity/ccm-opacity.c: Don't filter window on opacity change.
    * src/ccm-display.c: Add xfixes check and xfixes cursor notify event.
    * src/ccm-window.c: Fix use of buffered pixmap on move.

2008-06-23  Nicolas Bruguier  <gandalfn@club-internet.fr>

    * src/ccm-debug.c:
    * src/ccm-debug.h: add ccm_debug_backtrace function.
    * src/ccm-display.c: add debug statement.
    * src/ccm-screen.c: initialize overlay window context matrix on each paint.